amount limit changed

--- a/views/generator.ejs
+++ b/views/generator.ejs
@@ -59,7 +59,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"> <i class="fas fa-pen-to-square"></i> </span>
                                     </div>
-                                    <input name="amount" id="amount" class="form-control" placeholder="Please Enter The Coupon Amount..." type="number" min="1" max="20" required>
+                                    <input name="amount" id="amount" class="form-control" placeholder="Please Enter The Coupon Amount (Rs. 1 to Rs. 100)..." type="number" min="1" max="100" required>
                                     <!-- <input name="url" class="form-control" placeholder="URL or Text" type="text" required> -->
                                 </div>
                                 <!-- input-group.// -->
