--- a/views/claim.ejs
+++ b/views/claim.ejs
@@ -34,7 +34,7 @@
     </div>
     <div class="card">
       <article class="card-body">
-        <form action="/claimed" method="POST" class="was-validated">
+        <form action="/registered" method="POST" class="was-validated">
           <div class="form-row">
             <div class="form-group col-md-4">
               <label for="name">Full Name:</label>
