back route changed'

--- a/views/scan.ejs
+++ b/views/scan.ejs
@@ -58,7 +58,7 @@
                 <div class="card-body">
                     <p class="card-text">Scan the QR Code to claim the reward!</p>
                 </div>
-                <a href="/"><button type="button" class="btn btn-outline-secondary btn-lg">Back</button></a>
+                <a href="/generator"><button type="button" class="btn btn-outline-secondary btn-lg">Back</button></a>
             </div>
             <!--Image card end.//-->
         </div>
